--- a/server/.sequelizerc
+++ b/server/.sequelizerc
@@ -1,8 +1,8 @@
-const path = require('path');
 require('dotenv').config()
- module.exports = {
- 'config': path.resolve('db', 'dbconfig.json'),
- 'models-path': path.resolve('db', 'models'),
- 'seeders-path': path.resolve('db', 'seeders'),
- 'migrations-path': path.resolve('db', 'migrations')
- };
+const path = require('path');
+module.exports = {
+    'config': path.resolve('db', 'database.json'),
+    'models-path': path.resolve('db', 'models'),
+    'seeders-path': path.resolve('db', 'seeders'),
+    'migrations-path': path.resolve('db', 'migrations')
+};
